@@ -65,6 +65,7 @@ java_library(name = "webdriver-api",
     "internal/FindsByClassName.java",
     "internal/FindsByCssSelector.java",
     "internal/FindsById.java",
+    "internal/Killable.java",
     "internal/FindsByLinkText.java",
     "internal/FindsByName.java",
     "internal/FindsByTagName.java",
