@@ -21,12 +21,19 @@ import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.Platform;
 import org.openqa.selenium.StubDriver;
 import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.internal.Killable;
 import org.openqa.selenium.remote.DesiredCapabilities;
+import org.openqa.selenium.remote.RemoteWebDriver;
 import org.openqa.selenium.remote.SessionId;
+import org.openqa.selenium.remote.server.testing.StaticTestSessions;
 
+import java.util.concurrent.Callable;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.FutureTask;
 import java.util.logging.Logger;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 /**
  * @author Kristian Rosenvold
@@ -40,10 +47,57 @@ public class SessionCleanerTest {
     defaultDriverSessions.newSession(DesiredCapabilities.firefox());
     defaultDriverSessions.newSession(DesiredCapabilities.firefox());
     assertEquals(2, defaultDriverSessions.getSessions().size());
-    SessionCleaner sessionCleaner = new SessionCleaner(defaultDriverSessions, log, 10);
+    SessionCleaner sessionCleaner = new SessionCleaner(defaultDriverSessions, log, 10, 10);
     waitForAllSessionsToExpire();
     sessionCleaner.checkExpiry();
     assertEquals(0, defaultDriverSessions.getSessions().size());
+  }
+
+  @Test
+  public void testCleanupWithTimedOutKillableDriver() throws Exception {
+    Capabilities capabilities = new DesiredCapabilities("foo", "1", Platform.ANY);
+    DriverSessions testSessions = new StaticTestSessions(capabilities, new KillableDriver());
+
+    final Session session = testSessions.get(testSessions.newSession(capabilities));
+    final CountDownLatch started = new CountDownLatch(1);
+    final CountDownLatch testDone = new CountDownLatch(1);
+    Runnable runnable = getRunnableThatMakesSessionBusy(session, started, testDone);
+    new Thread( runnable).start();
+    started.await();
+
+    KillableDriver killableDriver = (KillableDriver) session.getDriver();
+    assertTrue(session.isInUse());
+    SessionCleaner sessionCleaner = new SessionCleaner(testSessions, log, 10, 10);
+    waitForAllSessionsToExpire();
+    sessionCleaner.checkExpiry();
+    assertEquals(0, testSessions.getSessions().size());
+    assertTrue(killableDriver.killed);
+    testDone.countDown();
+  }
+
+  private Runnable getRunnableThatMakesSessionBusy(final Session session,
+                                                   final CountDownLatch started,
+                                                   final CountDownLatch testDone) {
+    return new Runnable(){
+      public void run(){
+        try {
+          session.execute(new FutureTask<Object>(new Callable<Object>()
+         {
+          public Object call() {
+            try {
+              started.countDown();
+              testDone.await();
+            } catch (InterruptedException e) {
+              throw new RuntimeException(e);
+            }
+            return "yo";
+          }
+        }));
+        } catch (Exception e) {
+          throw new RuntimeException(e);
+        }
+      }
+    };
   }
 
   @Test
@@ -68,7 +122,7 @@ public class SessionCleanerTest {
 
   class TestSessionCleaner extends SessionCleaner {
     TestSessionCleaner(DriverSessions driverSessions, Logger log, int sessionTimeOutInMs) {
-      super(driverSessions, log, sessionTimeOutInMs);
+      super(driverSessions, log, sessionTimeOutInMs, sessionTimeOutInMs);
     }
 
     @Override
@@ -85,7 +139,7 @@ public class SessionCleanerTest {
     DriverSessions defaultDriverSessions = getDriverSessions();
     SessionId firstSession = defaultDriverSessions.newSession(DesiredCapabilities.firefox());
     defaultDriverSessions.newSession(DesiredCapabilities.firefox());
-    SessionCleaner sessionCleaner = new SessionCleaner(defaultDriverSessions, log, 10);
+    SessionCleaner sessionCleaner = new SessionCleaner(defaultDriverSessions, log, 10, 10);
     waitForAllSessionsToExpire();
     defaultDriverSessions.get(firstSession).updateLastAccessTime();
     sessionCleaner.checkExpiry();
@@ -116,6 +170,14 @@ public class SessionCleanerTest {
 
     public boolean hasMappingFor(Capabilities capabilities) {
       return true;
+    }
+  }
+
+  static class KillableDriver extends RemoteWebDriver implements Killable {
+    boolean killed;
+
+    public void kill() {
+      killed = true;
     }
   }
 
